test/functions/vass/ambiguous-call.good
ambiguous-call.chpl:7: error: ambiguous call 'amb(int(64))'
ambiguous-call.chpl:3: note: candidates are: amb(i: int)
ambiguous-call.chpl:4: note:                 amb(i: int)
