test/functions/vass/ambiguous-call.chpl
// ambiguous call

proc amb(i:int){}
proc amb(i:int){}

var i:int;
amb(i);
